src/test/resources/test_data/error/arrayGetNotArray.smtx
main module arrayGetNotArray {
    @arrayget(1, 2);
}